[gd_scene load_steps=10 format=3 uid="uid://djcd073if3nre"]

[ext_resource type="Texture2D" uid="uid://bg2r11bcivgnj" path="res://flappy-bird-assets-master/sprites/yellowbird-downflap.png" id="1_7g8tx"]
[ext_resource type="Script" uid="uid://c00u5e2j20myh" path="res://Scenes/bird.gd" id="1_c72n0"]
[ext_resource type="Texture2D" uid="uid://uk4o4lbvaoak" path="res://flappy-bird-assets-master/sprites/yellowbird-midflap.png" id="2_8f3k0"]
[ext_resource type="Texture2D" uid="uid://ms3ibbmans2w" path="res://flappy-bird-assets-master/sprites/yellowbird-upflap.png" id="3_gh48v"]
[ext_resource type="AudioStream" uid="uid://cadqqrhytchoh" path="res://flappy-bird-assets-master/audio/wing.wav" id="5_pfwoh"]
[ext_resource type="AudioStream" uid="uid://cp23x0uux2w6f" path="res://flappy-bird-assets-master/audio/hit.wav" id="6_om1ab"]
[ext_resource type="AudioStream" uid="uid://dnoegcrj704g5" path="res://flappy-bird-assets-master/audio/die.wav" id="7_oc6qe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hlxy3"]
radius = 18.0
height = 52.0

[sub_resource type="SpriteFrames" id="SpriteFrames_3evrk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7g8tx")
}, {
"duration": 1.0,
"texture": ExtResource("2_8f3k0")
}, {
"duration": 1.0,
"texture": ExtResource("3_gh48v")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Bird" type="CharacterBody2D" groups=["bird"]]
script = ExtResource("1_c72n0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hlxy3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_3evrk")
frame_progress = 0.762177

[node name="HitboxComponent" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hlxy3")

[node name="FlapSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pfwoh")
bus = &"SFX"

[node name="HitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_om1ab")
bus = &"SFX"

[node name="DieSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_oc6qe")
bus = &"SFX"

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
